# mestc

./: Cargo.toml  README.md  program.mest  update.ps1  update.sh
crates/mest-cli/: Cargo.toml
crates/mest-core/: Cargo.toml
crates/mest-core/src/: ast.rs  hir.rs  lexer.rs  lib.rs  parser.rs  thunk.rs  token.rs  typecheck.rs  visitor.rs
crates/mest-lsp/: Cargo.toml
crates/mest-lsp/src/: backend.rs  lib.rs  main.rs
crates/mestc/: Cargo.toml
crates/mestc/src/: main.rs
crates/mestc/tests/: cli_test.rs
crates/mestc/tests/fixtures/check/: bool_chain.mest  const_fn.mest  custom_type_match.mest  custom_type_match_payload.mest  custom_type_payload.mest  custom_type_simple.mest  fun_apply.mest  higher_order.mest  id_id.mest  let_add.mest  let_and.mest  let_and_rec.mest  let_binding.mest  let_nested_tuple.mest  let_not.mest  let_poly_type_error.mest  let_polymorphism.mest  let_tuple_and.mest  let_tuple_bind.mest  match_expr.mest  match_if.mest  match_type_error.mest  match_wildcard.mest  nested_if.mest  nested_let.mest  rec_id.mest  rec_infinite_type.mest
crates/mestc/tests/fixtures/run/: apply.mest  bool_ops.mest  custom_type_match.mest  custom_type_match_payload.mest  let_add.mest  let_and.mest  let_and_rec.mest  let_tuple_and.mest  let_tuple_bind.mest  nested_if.mest  parens.mest  pow.mest  rec_factorial.mest
