[workspace]
members = [
    "crates/mest-core",
    "crates/mestc",
    "crates/mest-lsp",
]
default-members = ["crates/mestc"]
resolver = "2"

[workspace.dependencies]
ariadne = "0.6.0"
bumpalo = "3.20.3"
chumsky = { version = "0.13.0", features = ["default", "pratt"] }
clap = { version = "4.6.1", features = ["derive"] }
derive_more = { version = "2.1.1", features = ["full"] }
im = "15.1.0"
lasso = "0.7.3"
logos = { version = "0.16.1", features = ["default"] }
tokio = { version = "1", features = ["full"] }
