[package]
name = "mest-core"
version = "0.4.0"
edition = "2024"
description = "Core language library for the Mest programming language"
license = "MIT"
repository = "https://github.com/goncalompontes/mestc"
keywords = ["language", "functional", "programming-language"]
categories = ["development-tools"]
rust-version = "1.85"

[dependencies]
bumpalo = { workspace = true }
chumsky = { workspace = true }
derive_more = { workspace = true }
im = { workspace = true }
lasso = { workspace = true }
logos = { workspace = true }
itertools.workspace = true
thiserror = { workspace = true }
ariadne = { workspace = true }
yansi = "1"
