[package]
name = "mest-lsp"
version = "0.4.0"
edition = "2024"
description = "LSP server for the Mest programming language"
license = "MIT"
repository = "https://github.com/goncalompontes/mestc"
rust-version = "1.85"

[dependencies]
mest-core = { path = "../mest-core", version = "0.4.0" }
tower-lsp = "0.20.0"
tokio.workspace = true
bumpalo.workspace = true
chumsky.workspace = true
lasso.workspace = true
logos.workspace = true
